<?xml version="1.0"?>
<package format="2">
  <name>replica_converter</name>
  <version>0.0.0</version>
  <description>The replica_converter package</description>

  <maintainer email="zhaolingzhe@westlake.edu.cn">LingzheZhao</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>esim_common</depend>
  <depend>esim</depend>
  <depend>esim_data_provider</depend>
  <depend>esim_visualization</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

</package>
